--- a/style/main.css
+++ b/style/main.css
@@ -1,11 +1,10 @@
-@import url(fonts/clear-sans.css);
 html, body {
   margin: 0;
   padding: 0;
-  background: #faf8ef;
+  background: url('../images/wit.png');
   color: #776e65;
-  font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
-  font-size: 18px; }
+  font-family: 'Coda Caption', sans-serif,Arial, sans-serif;
+  font-size: 16px; }
 
 body {
   margin: 80px 0; }
@@ -16,8 +15,9 @@ body {
   clear: both; }
 
 h1.title {
-  font-size: 80px;
-  font-weight: bold;
+  font-family: 'Monoton', cursive;
+  color: #57CA9A;
+  font-size: 85px;
   margin: 0;
   display: block;
   float: left; }
@@ -53,7 +53,7 @@ h1.title {
 .score-container, .best-container {
   position: relative;
   display: inline-block;
-  background: #bbada0;
+  background: #B7C4B1;
   padding: 15px 25px;
   font-size: 25px;
   height: 25px;
@@ -80,7 +80,7 @@ h1.title {
     font-size: 25px;
     line-height: 25px;
     font-weight: bold;
-    color: rgba(119, 110, 101, 0.9);
+    color: rgba(119, 210, 101, 0.1);
     z-index: 100;
     -webkit-animation: move-up 600ms ease-in;
     -moz-animation: move-up 600ms ease-in;
@@ -149,8 +149,8 @@ hr {
   -ms-user-select: none;
   -ms-touch-action: none;
   touch-action: none;
-  background: #bbada0;
-  border-radius: 6px;
+  background: url('../images/wood.png');
+  border-radius: 9px;
   width: 500px;
   height: 500px;
   -webkit-box-sizing: border-box;
@@ -163,7 +163,7 @@ hr {
     right: 0;
     bottom: 0;
     left: 0;
-    background: rgba(238, 228, 218, 0.5);
+    background: rgba(238, 228, 218, 0.9);
     z-index: 100;
     text-align: center;
     -webkit-animation: fade-in 800ms ease 1200ms;
@@ -183,7 +183,7 @@ hr {
       margin-top: 59px; }
     .game-container .game-message a {
       display: inline-block;
-      background: #8f7a66;
+      background: #888888
       border-radius: 3px;
       padding: 0 20px;
       text-decoration: none;
@@ -194,7 +194,7 @@ hr {
       .game-container .game-message a.keep-playing-button {
         display: none; }
     .game-container .game-message.game-won {
-      background: rgba(237, 194, 46, 0.5);
+      background: #B7C4B1;
       color: #f9f6f2; }
       .game-container .game-message.game-won a.keep-playing-button {
         display: inline-block; }
@@ -220,7 +220,8 @@ hr {
   margin-right: 15px;
   float: left;
   border-radius: 3px;
-  background: rgba(238, 228, 218, 0.35); }
+  background-color: #CCCCB6;
+  opacity: 0.5;}
   .grid-cell:last-child {
     margin-right: 0; }
 
@@ -311,62 +312,65 @@ hr {
     text-align: center;
     font-weight: bold;
     z-index: 10;
-    font-size: 55px; }
+    font-size: 0.1px;
+  }
   .tile.tile-2 .tile-inner {
-    background: #eee4da;
+    background: url('../images/owl1.png');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-4 .tile-inner {
-    background: #ede0c8;
+    background: url('../images/owl2.png');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
-    color: #f9f6f2;
-    background: #f2b179; }
+    background: url('../images/owl3.png');
+    color: #f9f6f2; ]}    
   .tile.tile-16 .tile-inner {
-    color: #f9f6f2;
-    background: #f59563; }
+    background: url('../images/owl4.png');
+    color: #f9f6f2;}
   .tile.tile-32 .tile-inner {
-    color: #f9f6f2;
-    background: #f67c5f; }
+    background: url('../images/owl5.png');
+    color: #f9f6f2;}
   .tile.tile-64 .tile-inner {
-    color: #f9f6f2;
-    background: #f65e3b; }
+    background: url('../images/owl6.png');
+    color: #f9f6f2; }
   .tile.tile-128 .tile-inner {
+    background: url('../images/owl7.png');
     color: #f9f6f2;
-    background: #edcf72;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
-    font-size: 45px; }
+    font-size: 0.1px; }
     @media screen and (max-width: 520px) {
       .tile.tile-128 .tile-inner {
-        font-size: 25px; } }
+        font-size: 0.1; } }
   .tile.tile-256 .tile-inner {
+    background: url('../images/owl8.png');
     color: #f9f6f2;
-    background: #edcc61;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
-    font-size: 45px; }
+    font-size: 0.1px; }
     @media screen and (max-width: 520px) {
       .tile.tile-256 .tile-inner {
-        font-size: 25px; } }
+        font-size: 0.1px} }
   .tile.tile-512 .tile-inner {
+    background: url('../images/owl9.png');
     color: #f9f6f2;
-    background: #edc850;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
-    font-size: 45px; }
+    font-size: 0.1px; }
     @media screen and (max-width: 520px) {
       .tile.tile-512 .tile-inner {
-        font-size: 25px; } }
+        font-size: 0.1px} }
   .tile.tile-1024 .tile-inner {
+    background: url('../images/owl10.png');
     color: #f9f6f2;
     background: #edc53f;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
-    font-size: 35px; }
+    font-size: 0.1px; }
     @media screen and (max-width: 520px) {
       .tile.tile-1024 .tile-inner {
-        font-size: 15px; } }
+        font-size: 0.1px} }
   .tile.tile-2048 .tile-inner {
+    background: url('../images/owl11.png');
     color: #f9f6f2;
     background: #edc22e;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
-    font-size: 35px; }
+    font-size: 0.1px} }
     @media screen and (max-width: 520px) {
       .tile.tile-2048 .tile-inner {
         font-size: 15px; } }
@@ -551,7 +555,7 @@ hr {
     -ms-user-select: none;
     -ms-touch-action: none;
     touch-action: none;
-    background: #bbada0;
+    background: #C9C9C9;
     border-radius: 6px;
     width: 280px;
     height: 280px;
