--- a/style/main.css
+++ b/style/main.css
@@ -595,7 +595,7 @@ hr {
         margin-top: 59px; }
       .game-container .game-message a {
         display: inline-block;
-        background: #8f7a66;
+        background: #5E2D79;
         border-radius: 3px;
         padding: 0 20px;
         text-decoration: none;
